[package]
name = "becnhv2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.10", features = ["derive"] }
env_logger = "0.11.4"
git2 = "0.19.0"
human-panic = "2.0.1"
log = "0.4.22"
regex = "1.10.5"
semver = "1.0.23"

[[bin]]
name = "becnhv2"
test = false
bench = false
