[package]
name = "becnhv2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.10", features = ["derive"] }
curl = "0.4.47"
datetime = "0.5.2"
env_logger = "0.11.4"
git2 = "0.19.0"
human-panic = "2.0.1"
log = "0.4.22"
nightly2version = { git = "https://github.com/blyxyas/nightly2version" }
regex = "1.10.5"
semver = "1.0.23"
tar = { version = "0.4.42", default-features = false }

[build-dependencies]
lzma-sys = "0.1.20" # Just wanna make sure that user has xz

[[bin]]
name = "becnhv2"
test = false
bench = false
